generated/ca/uwaterloo/gsd/rangeFix/EccParser.output
Grammar

    0 $accept: eccFile $end

    1 eccFile: version commands toplevel contents

    2 version: VERSION ID ';'

    3 commands: /* empty */
    4         | commands command

    5 command: COMMAND type '{' arg_list '}' ';'

    6 type: VERSION
    7     | COMMAND
    8     | ID
    9     | CONFIGURATION
   10     | CDLPACKAGE
   11     | COMPONENT
   12     | INTERFACE
   13     | OPTION

   14 arg_list: /* empty */
   15         | arg_list arg

   16 arg: ID
   17    | DESCRIPTION
   18    | HARDWARE
   19    | TEMPLATE
   20    | PACKAGE
   21    | USERVALUE
   22    | INFERREDVALUE

   23 toplevel: CONFIGURATION ID '{' description hardware template packages '}' ';'

   24 description: DESCRIPTION STRING ';'

   25 hardware: HARDWARE ID ';'

   26 template: TEMPLATE ID ';'

   27 packages: /* empty */
   28         | packages package

   29 package: PACKAGE optional_source_specifier ID ID ';'

   30 optional_source_specifier: /* empty */
   31                          | '-' hardware_or_template

   32 hardware_or_template: HARDWARE
   33                     | TEMPLATE

   34 contents: /* empty */
   35         | contents content

   36 content: header ID '{' optional_value '}' ';'

   37 header: CDLPACKAGE
   38       | COMPONENT
   39       | INTERFACE
   40       | OPTION

   41 optional_value: /* empty */
   42               | prefixed_value
   43               | prefixed_value prefixed_value

   44 prefixed_value: prefix single_value
   45               | prefix single_value single_value

   46 prefix: USERVALUE
   47       | INFERREDVALUE

   48 single_value: STRING
   49             | ID


Terminals, with rules where they appear

$end (0) 0
'-' (45) 31
';' (59) 2 5 23 24 25 26 29 36
'{' (123) 5 23 36
'}' (125) 5 23 36
error (256)
VERSION (258) 2 6
COMMAND (259) 5 7
CONFIGURATION (260) 9 23
CDLPACKAGE (261) 10 37
COMPONENT (262) 11 38
INTERFACE (263) 12 39
OPTION (264) 13 40
DESCRIPTION (265) 17 24
HARDWARE (266) 18 25 32
TEMPLATE (267) 19 26 33
PACKAGE (268) 20 29
USERVALUE (269) 21 46
INFERREDVALUE (270) 22 47
ID (271) 2 8 16 23 25 26 29 36 49
STRING (272) 24 48


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
eccFile (23)
    on left: 1, on right: 0
version (24)
    on left: 2, on right: 1
commands (25)
    on left: 3 4, on right: 1 4
command (26)
    on left: 5, on right: 4
type (27)
    on left: 6 7 8 9 10 11 12 13, on right: 5
arg_list (28)
    on left: 14 15, on right: 5 15
arg (29)
    on left: 16 17 18 19 20 21 22, on right: 15
toplevel (30)
    on left: 23, on right: 1
description (31)
    on left: 24, on right: 23
hardware (32)
    on left: 25, on right: 23
template (33)
    on left: 26, on right: 23
packages (34)
    on left: 27 28, on right: 23 28
package (35)
    on left: 29, on right: 28
optional_source_specifier (36)
    on left: 30 31, on right: 29
hardware_or_template (37)
    on left: 32 33, on right: 31
contents (38)
    on left: 34 35, on right: 1 35
content (39)
    on left: 36, on right: 35
header (40)
    on left: 37 38 39 40, on right: 36
optional_value (41)
    on left: 41 42 43, on right: 36
prefixed_value (42)
    on left: 44 45, on right: 42 43
prefix (43)
    on left: 46 47, on right: 44 45
single_value (44)
    on left: 48 49, on right: 44 45


state 0

    0 $accept: . eccFile $end

    VERSION  shift, and go to state 1

    eccFile  go to state 2
    version  go to state 3


state 1

    2 version: VERSION . ID ';'

    ID  shift, and go to state 4


state 2

    0 $accept: eccFile . $end

    $end  shift, and go to state 5


state 3

    1 eccFile: version . commands toplevel contents

    $default  reduce using rule 3 (commands)

    commands  go to state 6


state 4

    2 version: VERSION ID . ';'

    ';'  shift, and go to state 7


state 5

    0 $accept: eccFile $end .

    $default  accept


state 6

    1 eccFile: version commands . toplevel contents
    4 commands: commands . command

    COMMAND        shift, and go to state 8
    CONFIGURATION  shift, and go to state 9

    command   go to state 10
    toplevel  go to state 11


state 7

    2 version: VERSION ID ';' .

    $default  reduce using rule 2 (version)


state 8

    5 command: COMMAND . type '{' arg_list '}' ';'

    VERSION        shift, and go to state 12
    COMMAND        shift, and go to state 13
    CONFIGURATION  shift, and go to state 14
    CDLPACKAGE     shift, and go to state 15
    COMPONENT      shift, and go to state 16
    INTERFACE      shift, and go to state 17
    OPTION         shift, and go to state 18
    ID             shift, and go to state 19

    type  go to state 20


state 9

   23 toplevel: CONFIGURATION . ID '{' description hardware template packages '}' ';'

    ID  shift, and go to state 21


state 10

    4 commands: commands command .

    $default  reduce using rule 4 (commands)


state 11

    1 eccFile: version commands toplevel . contents

    $default  reduce using rule 34 (contents)

    contents  go to state 22


state 12

    6 type: VERSION .

    $default  reduce using rule 6 (type)


state 13

    7 type: COMMAND .

    $default  reduce using rule 7 (type)


state 14

    9 type: CONFIGURATION .

    $default  reduce using rule 9 (type)


state 15

   10 type: CDLPACKAGE .

    $default  reduce using rule 10 (type)


state 16

   11 type: COMPONENT .

    $default  reduce using rule 11 (type)


state 17

   12 type: INTERFACE .

    $default  reduce using rule 12 (type)


state 18

   13 type: OPTION .

    $default  reduce using rule 13 (type)


state 19

    8 type: ID .

    $default  reduce using rule 8 (type)


state 20

    5 command: COMMAND type . '{' arg_list '}' ';'

    '{'  shift, and go to state 23


state 21

   23 toplevel: CONFIGURATION ID . '{' description hardware template packages '}' ';'

    '{'  shift, and go to state 24


state 22

    1 eccFile: version commands toplevel contents .
   35 contents: contents . content

    CDLPACKAGE  shift, and go to state 25
    COMPONENT   shift, and go to state 26
    INTERFACE   shift, and go to state 27
    OPTION      shift, and go to state 28

    $default  reduce using rule 1 (eccFile)

    content  go to state 29
    header   go to state 30


state 23

    5 command: COMMAND type '{' . arg_list '}' ';'

    $default  reduce using rule 14 (arg_list)

    arg_list  go to state 31


state 24

   23 toplevel: CONFIGURATION ID '{' . description hardware template packages '}' ';'

    DESCRIPTION  shift, and go to state 32

    description  go to state 33


state 25

   37 header: CDLPACKAGE .

    $default  reduce using rule 37 (header)


state 26

   38 header: COMPONENT .

    $default  reduce using rule 38 (header)


state 27

   39 header: INTERFACE .

    $default  reduce using rule 39 (header)


state 28

   40 header: OPTION .

    $default  reduce using rule 40 (header)


state 29

   35 contents: contents content .

    $default  reduce using rule 35 (contents)


state 30

   36 content: header . ID '{' optional_value '}' ';'

    ID  shift, and go to state 34


state 31

    5 command: COMMAND type '{' arg_list . '}' ';'
   15 arg_list: arg_list . arg

    DESCRIPTION    shift, and go to state 35
    HARDWARE       shift, and go to state 36
    TEMPLATE       shift, and go to state 37
    PACKAGE        shift, and go to state 38
    USERVALUE      shift, and go to state 39
    INFERREDVALUE  shift, and go to state 40
    ID             shift, and go to state 41
    '}'            shift, and go to state 42

    arg  go to state 43


state 32

   24 description: DESCRIPTION . STRING ';'

    STRING  shift, and go to state 44


state 33

   23 toplevel: CONFIGURATION ID '{' description . hardware template packages '}' ';'

    HARDWARE  shift, and go to state 45

    hardware  go to state 46


state 34

   36 content: header ID . '{' optional_value '}' ';'

    '{'  shift, and go to state 47


state 35

   17 arg: DESCRIPTION .

    $default  reduce using rule 17 (arg)


state 36

   18 arg: HARDWARE .

    $default  reduce using rule 18 (arg)


state 37

   19 arg: TEMPLATE .

    $default  reduce using rule 19 (arg)


state 38

   20 arg: PACKAGE .

    $default  reduce using rule 20 (arg)


state 39

   21 arg: USERVALUE .

    $default  reduce using rule 21 (arg)


state 40

   22 arg: INFERREDVALUE .

    $default  reduce using rule 22 (arg)


state 41

   16 arg: ID .

    $default  reduce using rule 16 (arg)


state 42

    5 command: COMMAND type '{' arg_list '}' . ';'

    ';'  shift, and go to state 48


state 43

   15 arg_list: arg_list arg .

    $default  reduce using rule 15 (arg_list)


state 44

   24 description: DESCRIPTION STRING . ';'

    ';'  shift, and go to state 49


state 45

   25 hardware: HARDWARE . ID ';'

    ID  shift, and go to state 50


state 46

   23 toplevel: CONFIGURATION ID '{' description hardware . template packages '}' ';'

    TEMPLATE  shift, and go to state 51

    template  go to state 52


state 47

   36 content: header ID '{' . optional_value '}' ';'

    USERVALUE      shift, and go to state 53
    INFERREDVALUE  shift, and go to state 54

    $default  reduce using rule 41 (optional_value)

    optional_value  go to state 55
    prefixed_value  go to state 56
    prefix          go to state 57


state 48

    5 command: COMMAND type '{' arg_list '}' ';' .

    $default  reduce using rule 5 (command)


state 49

   24 description: DESCRIPTION STRING ';' .

    $default  reduce using rule 24 (description)


state 50

   25 hardware: HARDWARE ID . ';'

    ';'  shift, and go to state 58


state 51

   26 template: TEMPLATE . ID ';'

    ID  shift, and go to state 59


state 52

   23 toplevel: CONFIGURATION ID '{' description hardware template . packages '}' ';'

    $default  reduce using rule 27 (packages)

    packages  go to state 60


state 53

   46 prefix: USERVALUE .

    $default  reduce using rule 46 (prefix)


state 54

   47 prefix: INFERREDVALUE .

    $default  reduce using rule 47 (prefix)


state 55

   36 content: header ID '{' optional_value . '}' ';'

    '}'  shift, and go to state 61


state 56

   42 optional_value: prefixed_value .
   43               | prefixed_value . prefixed_value

    USERVALUE      shift, and go to state 53
    INFERREDVALUE  shift, and go to state 54

    $default  reduce using rule 42 (optional_value)

    prefixed_value  go to state 62
    prefix          go to state 57


state 57

   44 prefixed_value: prefix . single_value
   45               | prefix . single_value single_value

    ID      shift, and go to state 63
    STRING  shift, and go to state 64

    single_value  go to state 65


state 58

   25 hardware: HARDWARE ID ';' .

    $default  reduce using rule 25 (hardware)


state 59

   26 template: TEMPLATE ID . ';'

    ';'  shift, and go to state 66


state 60

   23 toplevel: CONFIGURATION ID '{' description hardware template packages . '}' ';'
   28 packages: packages . package

    PACKAGE  shift, and go to state 67
    '}'      shift, and go to state 68

    package  go to state 69


state 61

   36 content: header ID '{' optional_value '}' . ';'

    ';'  shift, and go to state 70


state 62

   43 optional_value: prefixed_value prefixed_value .

    $default  reduce using rule 43 (optional_value)


state 63

   49 single_value: ID .

    $default  reduce using rule 49 (single_value)


state 64

   48 single_value: STRING .

    $default  reduce using rule 48 (single_value)


state 65

   44 prefixed_value: prefix single_value .
   45               | prefix single_value . single_value

    ID      shift, and go to state 63
    STRING  shift, and go to state 64

    $default  reduce using rule 44 (prefixed_value)

    single_value  go to state 71


state 66

   26 template: TEMPLATE ID ';' .

    $default  reduce using rule 26 (template)


state 67

   29 package: PACKAGE . optional_source_specifier ID ID ';'

    '-'  shift, and go to state 72

    $default  reduce using rule 30 (optional_source_specifier)

    optional_source_specifier  go to state 73


state 68

   23 toplevel: CONFIGURATION ID '{' description hardware template packages '}' . ';'

    ';'  shift, and go to state 74


state 69

   28 packages: packages package .

    $default  reduce using rule 28 (packages)


state 70

   36 content: header ID '{' optional_value '}' ';' .

    $default  reduce using rule 36 (content)


state 71

   45 prefixed_value: prefix single_value single_value .

    $default  reduce using rule 45 (prefixed_value)


state 72

   31 optional_source_specifier: '-' . hardware_or_template

    HARDWARE  shift, and go to state 75
    TEMPLATE  shift, and go to state 76

    hardware_or_template  go to state 77


state 73

   29 package: PACKAGE optional_source_specifier . ID ID ';'

    ID  shift, and go to state 78


state 74

   23 toplevel: CONFIGURATION ID '{' description hardware template packages '}' ';' .

    $default  reduce using rule 23 (toplevel)


state 75

   32 hardware_or_template: HARDWARE .

    $default  reduce using rule 32 (hardware_or_template)


state 76

   33 hardware_or_template: TEMPLATE .

    $default  reduce using rule 33 (hardware_or_template)


state 77

   31 optional_source_specifier: '-' hardware_or_template .

    $default  reduce using rule 31 (optional_source_specifier)


state 78

   29 package: PACKAGE optional_source_specifier ID . ID ';'

    ID  shift, and go to state 79


state 79

   29 package: PACKAGE optional_source_specifier ID ID . ';'

    ';'  shift, and go to state 80


state 80

   29 package: PACKAGE optional_source_specifier ID ID ';' .

    $default  reduce using rule 29 (package)
